ajustes finais para funcionamento

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = onisubscriptions
-version = 0.0.1
+version = 0.0.2
 author = Isaque Fernando et al.
 author_email = isaque.fernando@onimusic.com.br
 maintainer = Isaque Fernando et al.
@@ -22,5 +22,5 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
-include_package_data = true
+include_package_data = True
 packages = find:
