add api, altera modelos para remover abstracao, atualiza documentacao

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
 name = onisubscriptions
-version = 0.0.1
+version = 1.0.0
 author = Isaque Fernando et al.
 author_email = isaque.fernando@onimusic.com.br
 maintainer = Isaque Fernando et al.
 maintainer_email = isaque.fernando@onimusic.com.br
-description = Aplicativo para gestão de assinaturas dentro de aplicativos Django.
+description = Aplicativo para gestão de usuários e assinaturas dentro de aplicativos Django.
 long_description = file: README.rst
 url = https://www.onimusic.com.br/
 license = MIT
-keywords = django, subscriptions, payments
+keywords = django, authentication, users, subscriptions, payments
 classifiers =
     Environment :: Web Environment
     Framework :: Django
