--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ charset-normalizer==3.3.2
 discord==2.2.2
 discord.py==2.3.2
 Django==3.2.23
+django-rest-passwordreset==1.3.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 frozenlist==1.4.1
 idna==3.6
 multidict==6.0.4
